--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Next.js
+.next/
+out/
+node_modules/
+*.pem
+
+# Testing
+coverage/
+.nyc_output/
+
+# Production
+build/
+dist/
+
 # Ambiente
 .env
 .env.local
@@ -9,35 +23,25 @@
 *.swp
 *.swo
 *~
-
-# Sistema
 .DS_Store
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Vercel
+.vercel/
+
+# OS
 Thumbs.db
-*.log
+.DS_Store
 
-# Node (se usar no futuro)
-node_modules/
-npm-debug.log
-package-lock.json
-yarn.lock
-
-# Composer (se usar no futuro)
-vendor/
-composer.lock
-
-# Banco de dados
-*.sql
-*.sqlite
-*.db
-
-# Uploads/Temporários
-uploads/
+# Temporários
 temp/
 tmp/
 cache/
-
-# Arquivos de backup
 *.bak
 *.backup
-*~
-.swp
+
