Fix Vercel build configuration - remove standalone output

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
   "buildCommand": "next build",
-  "installCommand": "npm ci",
-  "outputDirectory": ".next/standalone"
+  "installCommand": "npm ci"
 }
